force-app/main/default/objects/TriggerSetting__c/fields/isDisableContactCountTrigger__c.field-meta.xml
<CustomField>
    <fullName>isDisableContactCountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDisableContactCountTrigger</label>
    <type>Checkbox</type>
</CustomField>