force-app/main/default/objects/TriggerSetting__c/fields/User_profile__c.field-meta.xml
<CustomField>
    <fullName>User_profile__c</fullName>
    <label>User profile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>