force-app/main/default/objects/TriggerSetting__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>